--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,4 +26,11 @@
         </activity>
     </application>
 
+    <uses-permission android:name="android.MANIFEST.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.MANIFEST.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
+
 </manifest>
