--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
             android:name=".RegistrationActivity"
             android:label="@string/title_activity_registration"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:label="Main Screen"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+
         <activity
             android:name=".EmailPasswordActivity"
             android:label="@string/app_name"
